--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -13,12 +13,12 @@
 .contact {
   background: linear-gradient(180deg, #050014 0%, rgba(1, 2, 30, 0.89) 100%);
   li {
-    a:hover {
-      opacity: 1;
-    }
-    img:hover {
+    a {
       border-radius: 40px;
-      box-shadow: 0px 0px 16px 3px #9094FFE5;
+      &:hover {
+        opacity: 1;
+        box-shadow: 0px 0px 16px 3px #9094FFE5;
+      }
     }
   }
 }
