--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -8,6 +8,8 @@
 
 .introduction {
   background-image: url('../images/2023week2/background-img.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .contact {
